 * Slave SIP channels now set HASH(SIP_CAUSE,<slave-channel-name>) on each
   response.  This permits the master channel to know how each channel dialled
   in a multi-channel setup resolved in an individual way.
 * Added 'externtcpport' and 'externtlsport' options to allow custom port
   configuration for the externip and externhost options when tcp or tls is used.

IAX2 Changes
-----------
 * Added rtsavesysname option into iax.conf to allow the systname to be saved
   on realtime updates.

MGCP Changes
------------
 * Added ability to preset channel variables on indicated lines with the setvar
   configuration option.  Also, clearvars=all resets the list of variables back
   to none.

Applications
------------
 * Added progress option to the app_dial D() option.  When progress DTMF is
   present, those values are sent immediately upon receiving a PROGRESS message
   regardless if the call has been answered or not.
 * Added functionality to the app_dial F() option to continue with execution
   at the current location when no parameters are provided.
 * Added c() option to app_chanspy. This option allows custom DTMF to be set
   to cycle through the next available channel.  By default this is still '*'.
 * Added x() option to app_chanspy.  This option allows DTMF to be set to
   exit the application.
 * The Voicemail application has been improved to automatically ignore messages
   that only contain silence.
 * The ChanSpy application now has the 'S' option, which makes the application
   automatically exit once it hits a point where no more channels are available
   to spy on.
 * The ChanSpy application also now has the 'E' option, which spies on a single
   channel and exits when that channel hangs up.

Dialplan Functions
------------------
 * Added new dialplan functions CONNECTEDLINE and REDIRECTING which permits
   setting various connected line and redirecting party information.
 * The CHANNEL() function now supports the "name" option.